--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -917,6 +917,9 @@ h4 {
   margin-bottom: 4rem;
   margin-top: 2rem;
 }
+.often-questions .accordion-heading.active + .accordion-block {
+  display: block;
+}
 .often-questions .accordion-heading span {
   border-bottom: 2px dotted #333;
 }
@@ -924,6 +927,12 @@ h4 {
   margin-top: 1rem;
   background-color: #f7e7e6;
   padding: 3rem 4rem;
+  display: none;
+}
+.often-questions p.active-style span {
+  color: rgba(178, 80, 188, 0.8);
+  font-weight: 900;
+  border: 0;
 }
 .often-questions .accordion-block:before {
   content: "";
